--- a/frontend/src/components/Upload/Upload.module.css
+++ b/frontend/src/components/Upload/Upload.module.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap');
+
 .Centre {
     display: flex;
     flex-direction: row;
@@ -15,21 +17,64 @@
     justify-content: center;
     align-items: center;
     align-content: center;
-    width: fit-content;
+    width: 70vh;
     border: 1px solid white;
     box-sizing: border-box;
     padding: 10px;
     border-radius: 15px;
-    height: 30vh;
+    height: 40vh;
     flex-wrap: wrap;
     background-color: rgb(255,255,255);
-
 }
 
 .Card:hover {
-  box-shadow: 0 5px 15px rgba(0,0,0,0.2), 0 10px 10px rgba(0,0,0,0.1);
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  box-shadow: 0 5px 15px rgba(0,0,0,0.01), 0 5px 5px rgba(0,0,0,0.05);
+
 }
+
+.MockButton {
+	 box-sizing: border-box;
+	 height: 50px;
+   width: 200px;
+   border-radius: 5px;
+	 display: table;
+	 font-size: 20px;
+	 font-weight: bold;
+	 box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.55);
+	 transition: background 0.5s;
+	 cursor: pointer;
+}
+ .MockButton span {
+   width: 100%;
+   border-radius: 5px;
+	 height: 100%;
+	 padding: 20px;
+	 color: #2d3142;
+	 box-shadow: 0 0 0 3px #2d3142 inset;
+	 background: transparent;
+}
+ .MockButton .away {
+	 display: table-cell;
+	 vertical-align: middle;
+	 text-align: center;
+}
+ .MockButton .over {
+	 display: none;
+}
+ .MockButton:hover span.away {
+	 display: none;
+}
+ .MockButton:hover span.over {
+	 display: table-cell;
+	 vertical-align: middle;
+	 text-align: center;
+	 color: white;
+	 box-shadow: none;
+}
+ .MockButton:hover {
+	 background: #2d3142;
+}
+ 
 
 .break {
   flex-basis: 100%;
