--- a/frontend/src/components/Upload/Upload.module.css
+++ b/frontend/src/components/Upload/Upload.module.css
@@ -12,6 +12,14 @@
     flex-wrap: wrap;
 }
 
+.Danger {
+      text-align: center;
+      font-size: 20px;
+      margin-bottom: 10px;
+      font-weight: bold;
+      color:red
+}
+
 .Card {
     display: flex;
     justify-content: center;
@@ -22,7 +30,7 @@
     box-sizing: border-box;
     padding: 10px;
     border-radius: 15px;
-    height: 250px;
+    height: 270px;
     font-size: 13pt;
     flex-wrap: wrap;
     background-color: rgb(255,255,255);
@@ -172,6 +180,9 @@ img {
 
   img {
     width:14vh
+  }
+  .Danger {
+    font-size: 2rem;
   }
 
 }
