Change calculations, set annotations from server

--- a/frontend/src/Output.css
+++ b/frontend/src/Output.css
@@ -1,3 +1,9 @@
 .rp-image {
     border: 5px solid black;
 }
+
+.output-wrapper {
+    display: inline-block;
+    width: 100%;
+    text-align: center;
+}
