--- a/frontend/src/components/Upload/Upload.module.css
+++ b/frontend/src/components/Upload/Upload.module.css
@@ -14,8 +14,9 @@
 
 .Danger {
       text-align: center;
-      font-size: 20px;
+      font-size: 15px;
       margin-bottom: 10px;
+
       font-weight: bold;
       color:red
 }
@@ -26,19 +27,29 @@
     align-items: center;
     align-content: center;
     width: 300px;
+    height: 360px;
     border: 1px solid white;
     box-sizing: border-box;
     padding: 10px;
     border-radius: 15px;
-    height: 330px;
     font-size: 13pt;
     flex-wrap: wrap;
     background-color: rgb(255,255,255);
+    position: relative;
 }
 
 .Card:hover {
   box-shadow: 0 5px 15px rgba(0,0,0,0.01), 0 5px 5px rgba(0,0,0,0.05);
 
+}
+
+.Info {
+  position: absolute;
+  padding: 10px;
+  bottom: 0px;
+  color: #23646E;
+  text-align: center;
+  font-size: 10pt;
 }
 
 .MockButton {
@@ -165,10 +176,10 @@ img {
   }
 }
 
-@media (min-width:500px ) and (min-height:600px) {
+@media (min-width:700px ) and (min-height:600px) {
   .Card {
     width: 60vw;
-    height:62vh;
+    height:69vh;
     font-size:1.5rem
   }
 
@@ -184,5 +195,9 @@ img {
   .Danger {
     font-size: 2rem;
   }
+
+  .Info {
+  font-size: 1.2rem;
+}
 
 }
