--- a/frontend/src/components/Output/Output.css
+++ b/frontend/src/components/Output/Output.css
@@ -7,3 +7,47 @@
     width: 100%;
     text-align: center;
 }
+
+button {
+
+  overflow: hidden;
+
+  margin: 10px;
+  padding: 12px 12px;
+
+  cursor: pointer;
+  user-select: none;
+  transition: all 150ms linear;
+  text-align: center;
+  white-space: nowrap;
+  text-decoration: none !important;
+  text-transform: none;
+  text-transform: capitalize;
+
+  background-color: #353866;
+  color: white;
+  border: 0 none;
+  border-radius: 8px;
+
+  font-size: 13px;
+  font-weight: 500;
+  line-height: 1.3;
+
+  box-shadow: 2px 5px 10px #e4e4e4;
+}
+
+button:hover {
+     transition: all 150ms linear;
+
+    opacity: .85;
+}
+
+button:active {
+     transition: all 150ms linear;
+    opacity: .75;
+}
+
+button:focus {
+    outline: 1px dotted #959595;
+    outline-offset: -4px;
+}
