--- a/frontend/src/components/NavBar/NavBar.module.css
+++ b/frontend/src/components/NavBar/NavBar.module.css
@@ -20,6 +20,7 @@
     padding-top: 10px;
     position: fixed;
     background-color: white;
+    border-bottom: 4px solid whitesmoke;
 }
     .Subtext {
         width: 253.154px;
