--- a/frontend/src/components/NavBar/NavBar.module.css
+++ b/frontend/src/components/NavBar/NavBar.module.css
@@ -18,14 +18,13 @@
     width: 100%;
     height: 77px;
     padding-top: 10px;
-    position: fixed;
     background-color: white;
     border-bottom: 4px solid whitesmoke;
     z-index: 999;
 }
     .Subtext {
         width: 253.154px;
-        text-align: justify;
+        text-align: center;
         text-indent: 13px;
         margin:10px;
         font-style: italic;
