--- a/frontend/src/components/NavBar/NavBarLogo/NavbarLogo.module.css
+++ b/frontend/src/components/NavBar/NavBarLogo/NavbarLogo.module.css
@@ -1,4 +1,4 @@
-.Letters {
+/* .Letters {
 	 animation: kaboom 5s ease alternate infinite;
 }
  .Letters:nth-child(2) {
@@ -21,4 +21,4 @@
 		 transform: scale(1.1);
 	}
 }
- 
+  */
